// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Position Javascript Positions 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "128px",
      "gridTemplateColumns": "1fr 1fr",
      "justifyItems": "left",
    }
  }
>
  <div>
    <div
      data-css-5116is=""
    >
      above
    </div>
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
      <div
        aria-hidden={true}
        className="psds-tooltip__tail psds-tooltip__tail--appearance-basic psds-tooltip__tail--tailPosition-bottom-center"
      />
    </div>
  </div>
  <div>
    <div
      data-css-5116is=""
    >
      aboveLeft
    </div>
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
      <div
        aria-hidden={true}
        className="psds-tooltip__tail psds-tooltip__tail--appearance-basic psds-tooltip__tail--tailPosition-bottom-left"
      />
    </div>
  </div>
  <div>
    <div
      data-css-5116is=""
    >
      aboveRight
    </div>
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
      <div
        aria-hidden={true}
        className="psds-tooltip__tail psds-tooltip__tail--appearance-basic psds-tooltip__tail--tailPosition-bottom-right"
      />
    </div>
  </div>
  <div>
    <div
      data-css-5116is=""
    >
      below
    </div>
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
      <div
        aria-hidden={true}
        className="psds-tooltip__tail psds-tooltip__tail--appearance-basic psds-tooltip__tail--tailPosition-top-center"
      />
    </div>
  </div>
  <div>
    <div
      data-css-5116is=""
    >
      belowLeft
    </div>
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
      <div
        aria-hidden={true}
        className="psds-tooltip__tail psds-tooltip__tail--appearance-basic psds-tooltip__tail--tailPosition-top-left"
      />
    </div>
  </div>
  <div>
    <div
      data-css-5116is=""
    >
      belowRight
    </div>
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
      <div
        aria-hidden={true}
        className="psds-tooltip__tail psds-tooltip__tail--appearance-basic psds-tooltip__tail--tailPosition-top-right"
      />
    </div>
  </div>
  <div>
    <div
      data-css-5116is=""
    >
      rightOf
    </div>
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
      <div
        aria-hidden={true}
        className="psds-tooltip__tail psds-tooltip__tail--appearance-basic psds-tooltip__tail--tailPosition-left-center"
      />
    </div>
  </div>
  <div>
    <div
      data-css-5116is=""
    >
      leftOf
    </div>
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
      <div
        aria-hidden={true}
        className="psds-tooltip__tail psds-tooltip__tail--appearance-basic psds-tooltip__tail--tailPosition-right-center"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Position Positions 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "128px",
      "gridTemplateColumns": "1fr 1fr",
      "justifyItems": "left",
    }
  }
>
  <div
    data-css-5116is=""
  >
    &lt;Above /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
  <div
    data-css-5116is=""
  >
    &lt;AboveLeft /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
  <div
    data-css-5116is=""
  >
    &lt;AboveRight /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
  <div
    data-css-5116is=""
  >
    &lt;Below /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
  <div
    data-css-5116is=""
  >
    &lt;BelowLeft /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
  <div
    data-css-5116is=""
  >
    &lt;BelowRight /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
  <div
    data-css-5116is=""
  >
    &lt;LeftOf /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
  <div
    data-css-5116is=""
  >
    &lt;RightOf /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Position Positions In Custom Portal 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr",
      "justifyItems": "left",
    }
  }
>
  <div
    data-css-yact98=""
  >
    <div
      data-css-5116is=""
    >
      &lt;Above /&gt;
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="psds-tooltip psds-tooltip--appearance-basic"
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        The tip
      </div>
    </div>
  </div>
  <div
    data-css-yact98=""
  >
    <div
      data-css-5116is=""
    >
      &lt;AboveLeft /&gt;
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="psds-tooltip psds-tooltip--appearance-basic"
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        The tip
      </div>
    </div>
  </div>
  <div
    data-css-yact98=""
  >
    <div
      data-css-5116is=""
    >
      &lt;AboveRight /&gt;
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="psds-tooltip psds-tooltip--appearance-basic"
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        The tip
      </div>
    </div>
  </div>
  <div
    data-css-yact98=""
  >
    <div
      data-css-5116is=""
    >
      &lt;Below /&gt;
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="psds-tooltip psds-tooltip--appearance-basic"
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        The tip
      </div>
    </div>
  </div>
  <div
    data-css-yact98=""
  >
    <div
      data-css-5116is=""
    >
      &lt;BelowLeft /&gt;
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="psds-tooltip psds-tooltip--appearance-basic"
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        The tip
      </div>
    </div>
  </div>
  <div
    data-css-yact98=""
  >
    <div
      data-css-5116is=""
    >
      &lt;BelowRight /&gt;
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="psds-tooltip psds-tooltip--appearance-basic"
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        The tip
      </div>
    </div>
  </div>
  <div
    data-css-yact98=""
  >
    <div
      data-css-5116is=""
    >
      &lt;LeftOf /&gt;
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="psds-tooltip psds-tooltip--appearance-basic"
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        The tip
      </div>
    </div>
  </div>
  <div
    data-css-yact98=""
  >
    <div
      data-css-5116is=""
    >
      &lt;RightOf /&gt;
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="psds-tooltip psds-tooltip--appearance-basic"
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        The tip
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Position Positions On Edge 1`] = `
<div
  style={
    Object {
      "background": "pink",
      "color": "white",
      "height": "100vh",
      "outline": "10px solid red",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "left": 0,
        "position": "absolute",
        "top": 0,
      }
    }
  >
    <div
      className="psds-icon psds-icon--size-medium"
    >
      <svg
        aria-label="info icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          clipRule="evenodd"
          d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="psds-tooltip psds-tooltip--appearance-basic"
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        AboveRight
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "left": "50%",
        "position": "absolute",
        "top": 0,
      }
    }
  >
    <div
      className="psds-icon psds-icon--size-medium"
    >
      <svg
        aria-label="info icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          clipRule="evenodd"
          d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="psds-tooltip psds-tooltip--appearance-basic"
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        Above
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      className="psds-icon psds-icon--size-medium"
    >
      <svg
        aria-label="info icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          clipRule="evenodd"
          d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="psds-tooltip psds-tooltip--appearance-basic"
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        AboveLeft
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "left": 0,
        "position": "absolute",
        "top": "50%",
      }
    }
  >
    <div
      className="psds-icon psds-icon--size-medium"
    >
      <svg
        aria-label="info icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          clipRule="evenodd"
          d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="psds-tooltip psds-tooltip--appearance-basic"
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        LeftOf
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "position": "absolute",
        "right": 0,
        "top": "50%",
      }
    }
  >
    <div
      className="psds-icon psds-icon--size-medium"
    >
      <svg
        aria-label="info icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          clipRule="evenodd"
          d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="psds-tooltip psds-tooltip--appearance-basic"
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        RightOf
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
      }
    }
  >
    <div
      className="psds-icon psds-icon--size-medium"
    >
      <svg
        aria-label="info icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          clipRule="evenodd"
          d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="psds-tooltip psds-tooltip--appearance-basic"
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        BelowRight
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "bottom": 0,
        "left": "50%",
        "position": "absolute",
      }
    }
  >
    <div
      className="psds-icon psds-icon--size-medium"
    >
      <svg
        aria-label="info icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          clipRule="evenodd"
          d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="psds-tooltip psds-tooltip--appearance-basic"
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        Below
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <div
      className="psds-icon psds-icon--size-medium"
    >
      <svg
        aria-label="info icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          clipRule="evenodd"
          d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm11 4.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-11h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="psds-tooltip psds-tooltip--appearance-basic"
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        BelowLeft
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Position Scrollable Container 1`] = `
<div
  data-css-1h4s9im=""
>
  <div
    data-css-916a33=""
  />
  <div
    data-css-5116is=""
  >
    target
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
  <div
    data-css-916a33=""
  />
</div>
`;

exports[`Storyshots Components/Position Shown Element Keeps Ref 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    Tooltip is pink
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "color": "#E7558B",
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
  <span
    style={
      Object {
        "color": "white",
        "position": "absolute",
        "top": 250,
      }
    }
  >
    X: 
    -1
    , Y: 
    -1
  </span>,
]
`;

exports[`Storyshots Components/Position Shown Element Keeps Style Prop 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    Tooltip is pink
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "color": "#E7558B",
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components/Position Target 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "128px",
      "gridTemplateColumns": "1fr 1fr",
      "justifyItems": "left",
    }
  }
>
  <div
    data-css-5116is=""
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;Above /&gt;
    </div>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
  <div
    data-css-5116is=""
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;AboveLeft /&gt;
    </div>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
  <div
    data-css-5116is=""
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;AboveRight /&gt;
    </div>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
  <div
    data-css-5116is=""
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;Below /&gt;
    </div>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
  <div
    data-css-5116is=""
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;BelowLeft /&gt;
    </div>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
  <div
    data-css-5116is=""
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;BelowRight /&gt;
    </div>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
  <div
    data-css-5116is=""
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;LeftOf /&gt;
    </div>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
  <div
    data-css-5116is=""
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;RightOf /&gt;
    </div>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="psds-tooltip psds-tooltip--appearance-basic"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;
